# new-wave-of-python-packaging-binder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo.ipynb  package-lock.json  package.json  pyproject.toml  tox.toml
.github/workflows/: docker-image.yaml  docker-image.yml  pre-commit.yaml
1/: pyproject.toml
1/.github/: SECURITY.md
1/primes/: __init__.py
1/tests/: test_prime.py
2/: pyproject.toml
2/primes/: __init__.py  _primes.pyx
2/tests/: test_prime.py
3/: do.py
5/: Dockerfile  pyproject.toml  tox.toml
5/tests/: test_prime.py
6/: Cargo.toml  pyproject.toml
6/primes/: __init__.py
6/rust/src/: main.rs
6/rust/src/tests/: main_tests.rs
binder/: Dockerfile
