[build-system]
build-backend = "maturin"
requires = [
  "maturin>=1.8.3",
]

[project]
name = "primes"
version = "1.0.0"
description = "Generate primes"
authors = [
  { name = "Bernat Gabor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [  ]
scripts.primes = "primes:run"
scripts.primes-fast = "primes:run_fast"

[dependency-groups]
dev = [ "pytest>=8.3.5", { include-group = "type" } ]
type = [ "pyright>=1.1.397" ]

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
python-packages = [ "primes" ]
module-name = "primes._lib"
strip = true
include = [
  "rust-toolchain.toml",
]
